CHANNELMGR-2178 fixed content editor overflow

--- a/channel-manager/frontend-ng/src/app/channel/sidePanels/rightSidePanel/contentEditor/contentEditor.scss
+++ b/channel-manager/frontend-ng/src/app/channel/sidePanels/rightSidePanel/contentEditor/contentEditor.scss
@@ -17,6 +17,7 @@
 
 content-editor {
   min-height: 0;
+  overflow: hidden;
 
   .hippo-hint-icon {
     margin: 0 4px;
